--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
-    "next": "15.4.6",
+    "next": "^16.0.2-canary.26",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.66.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
